--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@ document.addEventListener('DOMContentLoaded', function() {
         }
       }
     };
-    xhr.open('POST', 'http://localhost:3000/login', true);
+    xhr.open('POST', 'https://4537-activity-emn4.vercel.app/', true);
     xhr.setRequestHeader('Content-Type', 'application/json');
     xhr.send(JSON.stringify({ username, password }));
   };
@@ -42,7 +42,7 @@ document.addEventListener('DOMContentLoaded', function() {
         alert(xhr.responseText);
       }
     };
-    xhr.open('GET', 'http://localhost:3000/something', true);
+    xhr.open('GET', 'https://4537-activity-emn4.vercel.app/', true);
     xhr.send();
   };
   // Initial setup: hide the logout label and ensure 
