--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,7 @@ document.addEventListener('DOMContentLoaded', function() {
         alert(xhr.responseText);
       }
     };
-    xhr.open('GET', 'https://4537-activity-lewp.vercel.app/login', true);
+    xhr.open('GET', 'https://4537-activity-lewp.vercel.app/something', true);
     xhr.send();
   };
   // Initial setup: hide the logout label and ensure 
